# fortisbc-py

./: pyproject.toml  test_live.py
fortisbc/: __init__.py  api.py  exceptions.py  models.py
tests/: conftest.py  test_models.py  test_parsing.py
tests/fixtures/: account_summary.html  consumption_page.html  electric_ajax.html  gas_ajax.html  gas_billing_history.html
